--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,12 @@
             </p>
             <p>Liens utiles</p>
             <ul>
-                <li><a href="[GITHUB]" target="_blank">Énoncé</a></li>
-                <li><a href="[GITHUB]" target="_blank">Grille de correction</a></li>
+                <li><a href="https://docs.google.com/document/d/1k3SOcxy2ddxVTMYMc0aD5_6P9BWjbN5TV0eEuNhMok4/edit?usp=sharing" target="_blank">Énoncé</a></li>
+                <li>
+                    <a href="https://docs.google.com/spreadsheets/d/1H5xW93LwADBarqUrbzJxp3TSYbE4tGV72tsVKFBRKSM/edit?usp=sharing" target="_blank"
+                        >Grille de correction</a
+                    >
+                </li>
             </ul>
             <h2>Votre compréhension</h2>
             <p>Ajouter votre lien youtube ici: <a href="[LIENYOUTUBE]" target="_blank">ma vidéo</a></p>
